--- a/frontend/src/styles/component.css
+++ b/frontend/src/styles/component.css
@@ -2,11 +2,11 @@
     border: 2px solid var(--component-border);
     background-color: var(--bg);
 
-    width: 100vw;
-    height: 100vh;
+    min-width: 100%;
+    min-height: 100%;
 
     padding: 1rem;
-    margin: 0;
+    margin: 0rem;
     border-radius: 8px;
 
     box-sizing: border-box;
