--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -2,7 +2,6 @@
 @import 'component.css';
 @import 'button.css';
 
-
 * {
     margin: 0;
     padding: 0;
@@ -16,6 +15,13 @@
 html, body, #root {
     height: 100%;
     background-color: var(--bg);
+
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+/* Hide scrollbar for Chrome/Safari */
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+    display: none;
 }
 
 .fit { 
